# MLOps-databricks

./: .gitignore  main.py  pyproject.toml  requirements.txt
AgenticAI/: manage.py
AgenticAI/AgenticAI/: asgi.py  settings.py  urls.py  wsgi.py
